Version 2.9.0 (unreleased)

* New feature: Drawing of state diagrams with more pseudostates possible.
* Cannot anchor note in state diagram (270597)
* Color of role text on diagram (e.g. Role B) nearly invisible (291401)
* Junk residual UMLAssociations saved to XMI (293042)

Version 2.8.1

* PHP5 code generation: Illegal tag without any parameter is generated (155382)
* Classes in sub-packages are moved to top level packages on edit (174184)
* Loading existing XMI file (194897) and therefore also
  -  umbrello (2.4.2) crashed while opening solid_design.xmi (233705)
* Generation of classes from files in folder in umbrello (197137)
* Crash when Clicking on / Trying to Move Datatype on Simple Diagram (202410)
* Segfault importing Java code - related to variable length parameters (230770)
* Segmentation fault when trying to generate code (235703)
* Can't uncheck "Show Public Only" (242545)
* Umbrello crashed after copy/paste (243392) 
* Crash when opening file (251094) 
* Crashes even if an association was drawn (271243)
* Gratuitous warning messages on loading project file (283744)
* Creates many 'new_package_xx' packages on file loading (291159)
* Crash on importing templated java source code (293770)
* New feature: C# code import added.

Version 2.8.0

* New feature: Code import wizard added
* New feature: Print preview added.
* Made printing border calculation more robust
* Reuse changed printer settings
* Show diagram print settings dialog before print or print preview dialog
* Added msvc2010 preprocesser for idl preprocessing
* Enabling of cut/copy/paste actions is incorrect (70925)
* Segmentation fault when copy&paste of sequence diagram (287179) and therefore also
  - Copy and paste or drag and drop of a java datatype between folders (280770) 
  - crash on copy paste (262842)
  - Crash when copy/paste, from a class tab to an other, 2 linked tables (286449)
  - Cut Class and paste as Entity cause crash (274265)
  - Umbrello crashed when cut/paste (275372)