@@ -4,6 +4,7 @@ Version 2.9.0 (unreleased)
 * Cannot anchor note in state diagram (270597)
 * Color of role text on diagram (e.g. Role B) nearly invisible (291401)
 * Junk residual UMLAssociations saved to XMI (293042)
+* Problems with widget moving/resizing in state diagrams (295605)
 
 Version 2.8.1
 
